Remove useless cert/Upd project section name

--- a/index.html
+++ b/index.html
@@ -113,13 +113,17 @@
                     <i class="fas fa-award text-warning"></i>
                     AWS certified</strong></p>
                 <p class="fade-in font-weight-bold mb-2 h2" id="item8">Languages:</p>
-                <p class="fade-in about-info" id="item9"> <i class="fa-solid fa-play text-info"></i> English - B2</p>
-                <p class="fade-in about-info" id="item10"> <i class="fa-solid fa-play text-info"></i> Polish - B2</p>
-                <p class="fade-in about-info" id="item11"> <i class="fa-solid fa-play text-info"></i> Russian - native speaker</p>
-                <p class="fade-in about-info" id="item12"> <i class="fa-solid fa-play text-info"></i> Belarusian - native speaker</p>
+                <p class="fade-in about-info" id="item9"><i class="fa-solid fa-play text-info"></i> English - B2</p>
+                <p class="fade-in about-info" id="item10"><i class="fa-solid fa-play text-info"></i> Polish - B2</p>
+                <p class="fade-in about-info" id="item11"><i class="fa-solid fa-play text-info"></i> Russian - native
+                    speaker</p>
+                <p class="fade-in about-info" id="item12"><i class="fa-solid fa-play text-info"></i> Belarusian - native
+                    speaker</p>
                 <p class="fade-in font-weight-bold mb-2 h2" id="item13">Hobbies:</p>
-                <p class="fade-in about-info" id="item14"> <i class="fa-solid fa-plug text-info"></i> I love an active lifestyle (skiing, hiking, swimming, cycling, basketball, traveling)</p>
-                <p class="fade-in about-info" id="item15"> <i class="fa-solid fa-plug text-info"></i> I am passionate about cars and technology</p>
+                <p class="fade-in about-info" id="item14"><i class="fa-solid fa-plug text-info"></i> I love an active
+                    lifestyle (skiing, hiking, swimming, cycling, basketball, traveling)</p>
+                <p class="fade-in about-info" id="item15"><i class="fa-solid fa-plug text-info"></i> I am passionate
+                    about cars and technologies</p>
             </div>
         </div>
     </div>
@@ -204,14 +208,6 @@
                     <img class="img-fluid img-cert" src="img/certificates/4.jpg" alt="">
                 </div>
             </div>
-            <!-- Certification Item 3-->
-            <div class="col-md-6 col-lg-4 mb-3">
-                <div class="mx-auto">
-                    <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-                    </div>
-                    <img class="img-fluid img-cert" src="img/certificates/3.jpg" alt="">
-                </div>
-            </div>
             <!-- Certification Item 2-->
             <div class="col-md-6 col-lg-4 mb-3">
                 <div class="mx-auto">
@@ -228,15 +224,6 @@
                     <img class="img-fluid img-cert" src="img/certificates/1.jpg" alt="">
                 </div>
             </div>
-            <!-- Certification Item 10-->
-            <div class="col-md-6 col-lg-4 mb-3">
-                <div class="mx-auto">
-                    <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-                    </div>
-                    <img class="img-fluid img-cert" src="img/certificates/10.jpg" alt="">
-                </div>
-            </div>
-
         </div>
         <!-- /.row -->
     </div>
@@ -247,7 +234,7 @@
     <div id="particles-js">
         <div class="container page-section-bg">
             <!-- Projects Section Heading-->
-            <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Projects</h2>
+            <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Commercial projects</h2>
             <!-- Icon Divider-->
             <div class="divider-custom">
                 <div class="divider-custom-line"></div>
@@ -378,30 +365,30 @@
         <!-- Contact Section Form -->
         <div class="row">
             <div class="col-lg text-center">
-                <p> <a class="contact-me-btn glowing-text" href="https://www.linkedin.com/in/vitold-radkevich/">
+                <p><a class="contact-me-btn glowing-text" href="https://www.linkedin.com/in/vitold-radkevich/">
                     <i class="fab fa-linkedin"></i> Linkedin</a>
                 </p>
             </div>
             <div class="col-lg text-center">
-                <p> <a class="contact-me-btn glowing-text" href="mailto:radkevichvit@gmail.com">
+                <p><a class="contact-me-btn glowing-text" href="mailto:radkevichvit@gmail.com">
                     <i class="fab fa-google"></i> Mail</a>
                 </p>
             </div>
 
             <div class="col-lg text-center">
-                <p> <a class="contact-me-btn glowing-text" href="CV/Radkevich-CV-2021.pdf">
+                <p><a class="contact-me-btn glowing-text" href="CV/Radkevich-CV-2021.pdf">
                     <i class="far fa-file-word"></i> My CV</a>
                 </p>
             </div>
 
             <div class="col-lg text-center">
-                <p> <a class="contact-me-btn glowing-text" href="CV/Radkevich-CV-2021.pdf">
+                <p><a class="contact-me-btn glowing-text" href="CV/Radkevich-CV-2021.pdf">
                     <i class="far fa-file-word"></i> CV Projects</a>
                 </p>
             </div>
 
             <div class="col-lg text-center">
-                <p> <a class="contact-me-btn glowing-text" href="tel:+48571091688">
+                <p><a class="contact-me-btn glowing-text" href="tel:+48571091688">
                     <i class="fas fa-mobile-alt"></i> Call me</a>
                 </p>
             </div>
@@ -460,9 +447,12 @@
                             <div class="card text-white bg-info mb-3 text-left">
                                 <div class="card-body">
                                     <p class="card-text">
-                                        This project is centered around creating an online platform catering to corporate clients globally,
-                                        facilitating the seamless purchase of flowers. Situated in the United Arab Emirates, the platform aims
-                                        to provide a convenient and efficient solution for businesses worldwide to access and acquire floral
+                                        This project is centered around creating an online platform catering to
+                                        corporate clients globally,
+                                        facilitating the seamless purchase of flowers. Situated in the United Arab
+                                        Emirates, the platform aims
+                                        to provide a convenient and efficient solution for businesses worldwide to
+                                        access and acquire floral
                                         arrangements for various corporate needs</div>
                                 <ul class="list-group list-group-item-info">
                                     <table class="table table-bordered table-info">
@@ -479,12 +469,14 @@
                                         </tr>
                                         <tr>
                                             <td>Technologies</td>
-                                            <td>Spring, Microservices, Hibernate, Git, JUnit, MongoDb, DynamoDb, MySQL, Stripe, AWS
+                                            <td>Spring, Microservices, Hibernate, Git, JUnit, MongoDb, DynamoDb, MySQL,
+                                                Stripe, AWS
                                             </td>
                                         </tr>
                                         <tr>
                                             <td>Skills</td>
-                                            <td>Write a module in a microservices architecture to integrate with the Odoo system using MongoDB,
+                                            <td>Write a module in a microservices architecture to integrate with the
+                                                Odoo system using MongoDB,
                                                 AWS SQS, and AWS SNS
                                             </td>
                                         </tr>
@@ -537,7 +529,8 @@
                                     <p class="card-text">
                                         This project aims to assess business risk and Business Interruption Value (BIV)
                                         by incorporating key business parameters. Utilizing the NAICS code, the system
-                                        employs specific calculation logic and formulas to generate comprehensive reports,
+                                        employs specific calculation logic and formulas to generate comprehensive
+                                        reports,
                                         offering valuable insights into risk evaluation for businesses</div>
                                 <ul class="list-group list-group-item-info">
                                     <table class="table table-bordered table-info">
@@ -559,10 +552,14 @@
                                         </tr>
                                         <tr>
                                             <td>Skills</td>
-                                            <td>Designed a project from scratch, employing UML diagrams and database schemas.
-                                                Created APIs for calculating business parameters and converted large datasets
-                                                from Excel to store the necessary parameters for calculations in the database.
-                                                Established infrastructures in AWS from scratch, utilizing services such as EC2,
+                                            <td>Designed a project from scratch, employing UML diagrams and database
+                                                schemas.
+                                                Created APIs for calculating business parameters and converted large
+                                                datasets
+                                                from Excel to store the necessary parameters for calculations in the
+                                                database.
+                                                Established infrastructures in AWS from scratch, utilizing services such
+                                                as EC2,
                                                 ASG, ELB, S3, ROUTE 53, CLOUD FRONT, BEANSTALK, VPC, and RDS
                                             </td>
                                         </tr>
@@ -613,10 +610,14 @@
                             <div class="card text-white bg-info mb-3 text-left">
                                 <div class="card-body">
                                     <p class="card-text">
-                                        The project is a comprehensive platform designed to streamline the process of finding and managing cleaning services for flats/houses in England.
-                                        Users, both cleaners, and clients, can seamlessly connect through the platform, facilitating the creation and management of cleaning jobs.
-                                        The system incorporates a franchise model, allowing for scalability and regional expansion. An intuitive admin panel provides centralized control,
-                                        ensuring efficient oversight and management of the entire operation. Additionally, the implementation of mail notifications enhances communication,
+                                        The project is a comprehensive platform designed to streamline the process of
+                                        finding and managing cleaning services for flats/houses in England.
+                                        Users, both cleaners, and clients, can seamlessly connect through the platform,
+                                        facilitating the creation and management of cleaning jobs.
+                                        The system incorporates a franchise model, allowing for scalability and regional
+                                        expansion. An intuitive admin panel provides centralized control,
+                                        ensuring efficient oversight and management of the entire operation.
+                                        Additionally, the implementation of mail notifications enhances communication,
                                         keeping users informed and engaged throughout the cleaning service process</div>
                                 <ul class="list-group list-group-item-info">
                                     <table class="table table-bordered table-info">
@@ -638,9 +639,11 @@
                                         </tr>
                                         <tr>
                                             <td>Skills</td>
-                                            <td>Rewrite the project from scratch, focusing on designing the architecture and hosting it.
+                                            <td>Rewrite the project from scratch, focusing on designing the architecture
+                                                and hosting it.
                                                 The old system used Spring MVC with a React app embedded within.
-                                                The goal is to separate it into two distinct apps and develop a Spring REST API
+                                                The goal is to separate it into two distinct apps and develop a Spring
+                                                REST API
                                             </td>
                                         </tr>
                                         <tr>
@@ -690,8 +693,10 @@
                             <div class="card text-white bg-info mb-3 text-left">
                                 <div class="card-body">
                                     <p class="card-text">
-                                        The project focuses on optimizing the internal transportation of documents within a bank's offices.
-                                        This initiative aims to enhance efficiency, reduce delays, and promote a seamless workflow in handling crucial
+                                        The project focuses on optimizing the internal transportation of documents
+                                        within a bank's offices.
+                                        This initiative aims to enhance efficiency, reduce delays, and promote a
+                                        seamless workflow in handling crucial
                                         materials between different departments</div>
                                 <ul class="list-group list-group-item-info">
                                     <table class="table table-bordered table-info">
@@ -708,7 +713,8 @@
                                         </tr>
                                         <tr>
                                             <td>Technologies</td>
-                                            <td>Spring, JPA, Hibernate, Rabbit MQ, Git, JUnit, MySQL, Microservices, Jenkins, Sonar
+                                            <td>Spring, JPA, Hibernate, Rabbit MQ, Git, JUnit, MySQL, Microservices,
+                                                Jenkins, Sonar
                                             </td>
                                         </tr>
                                         <tr>
@@ -782,12 +788,14 @@
                                         </tr>
                                         <tr>
                                             <td>Technologies</td>
-                                            <td>Kotlin, Spring, JPA, Hibernate, Rabbit MQ, BitBucket, JUnit, MySQL, Microservices, Jenkins, Sonar
+                                            <td>Kotlin, Spring, JPA, Hibernate, Rabbit MQ, BitBucket, JUnit, MySQL,
+                                                Microservices, Jenkins, Sonar
                                             </td>
                                         </tr>
                                         <tr>
                                             <td>Skills</td>
-                                            <td>Project support, bugs, module test coverage, new functionality implementation
+                                            <td>Project support, bugs, module test coverage, new functionality
+                                                implementation
                                             </td>
                                         </tr>
                                         <tr>
