Update cert section

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                 <div class="mx-auto">
                     <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                     </div>
-                    <img class="img-fluid img-cert" src="img/certificates/linux.jpg" alt="">
+                    <img class="img-fluid img-cert" src="img/certificates/linux.png" alt="">
                 </div>
             </div>
             <!-- Certification Item 9-->
@@ -224,8 +224,15 @@
                     <img class="img-fluid img-cert" src="img/certificates/1.jpg" alt="">
                 </div>
             </div>
+            <!-- Certification Item 10-->
+            <div class="col-md-6 col-lg-4 mb-3">
+                <div class="mx-auto">
+                    <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                    </div>
+                    <img class="img-fluid img-cert" src="img/certificates/english-2021.png" alt="">
+                </div>
+            </div>
         </div>
-        <!-- /.row -->
     </div>
 </section>
 
