Update contact section

--- a/index.html
+++ b/index.html
@@ -381,22 +381,14 @@
                     <i class="fab fa-google"></i> Mail</a>
                 </p>
             </div>
-
             <div class="col-lg text-center">
                 <p><a class="contact-me-btn glowing-text" href="CV/Radkevich-CV-2021.pdf">
-                    <i class="far fa-file-word"></i> My CV</a>
+                    <i class="fa-regular fa-file-pdf"></i> My CV</a>
                 </p>
             </div>
-
-            <div class="col-lg text-center">
-                <p><a class="contact-me-btn glowing-text" href="CV/Radkevich-CV-2021.pdf">
-                    <i class="far fa-file-word"></i> CV Projects</a>
-                </p>
-            </div>
-
             <div class="col-lg text-center">
                 <p><a class="contact-me-btn glowing-text" href="tel:+48571091688">
-                    <i class="fas fa-mobile-alt"></i> Call me</a>
+                    <i class="fa-solid fa-mobile-screen-button"></i> Call me</a>
                 </p>
             </div>
         </div>
