--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
                 </p>
             </div>
             <div class="col-lg text-center">
-                <p><a class="contact-me-btn glowing-text" href="CV/Radkevich-CV-2021.pdf">
+                <p><a class="contact-me-btn glowing-text" href="CV/Vitold_Radkevich_CV_2024.pdf">
                     <i class="fa-regular fa-file-pdf"></i> My CV</a>
                 </p>
             </div>
