Add Microsoft Certificate

--- a/index.html
+++ b/index.html
@@ -109,9 +109,8 @@
                     CI/CD (Jenkins)</p>
                 <p class="fade-in about-info" id="item6"><strong> <i class="fas fa-circle-notch fa-spin text-info"></i>
                     Version control:</strong> GitHub, Bitbucket</p>
-                <p class="fade-in about-info" id="item7"><strong>
-                    <i class="fas fa-award text-warning"></i>
-                    AWS certified</strong></p>
+                <p class="fade-in about-info" id="item7"><strong><i class="fas fa-award text-warning"></i> AWS certified</strong></p>
+                <p class="fade-in about-info" id="item7"><strong><i class="fas fa-award text-warning"></i> Career Essentials in Generative AI by Microsoft and LinkedIn</strong></p>
                 <p class="fade-in font-weight-bold mb-2 h2" id="item8">Languages:</p>
                 <p class="fade-in about-info" id="item9"><i class="fa-solid fa-play text-info"></i> English - B2</p>
                 <p class="fade-in about-info" id="item10"><i class="fa-solid fa-play text-info"></i> Polish - B2</p>
@@ -144,6 +143,14 @@
         </div>
         <!-- Certification Grid Items-->
         <div class="row">
+            <!-- Certification Item 13-->
+            <div class="col-md-6 col-lg-4 mb-3">
+                <div class="mx-auto">
+                    <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                    </div>
+                    <img class="img-fluid img-cert" src="img/certificates/Microsoft and LinkedIn1.jpg" alt="">
+                </div>
+            </div>
             <!-- Certification Item 12-->
             <div class="col-md-6 col-lg-4 mb-3">
                 <div class="mx-auto">
