--- a/index.html
+++ b/index.html
@@ -691,82 +691,6 @@
                             <div class="card text-white bg-info mb-3 text-left">
                                 <div class="card-body">
                                     <p class="card-text">
-                                        The project focuses on optimizing the internal transportation of documents
-                                        within a bank's offices.
-                                        This initiative aims to enhance efficiency, reduce delays, and promote a
-                                        seamless workflow in handling crucial
-                                        materials between different departments</div>
-                                <ul class="list-group list-group-item-info">
-                                    <table class="table table-bordered table-info">
-                                        <thead>
-                                        </thead>
-                                        <tbody>
-                                        <tr>
-                                            <td>Roles</td>
-                                            <td>Back-end developer</td>
-                                        </tr>
-                                        <tr>
-                                            <td>Team</td>
-                                            <td>9 members (6 programmers, 1 qa, 1 ba, tech lead)</td>
-                                        </tr>
-                                        <tr>
-                                            <td>Technologies</td>
-                                            <td>Spring, JPA, Hibernate, Rabbit MQ, Git, JUnit, MySQL, Microservices,
-                                                Jenkins, Sonar
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td>Skills</td>
-                                            <td>Migration to a new database, rewriting modules for new logic, tests
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td>Duration</td>
-                                            <td>4 months</td>
-                                        </tr>
-                                        </tbody>
-                                    </table>
-                                </ul>
-                            </div>
-                            <button class="btn btn-dark glowing-text-back-button btn-lg" href="#" data-dismiss="modal">
-                                <i class="far fa-times-circle"></i>
-                                Back
-                            </button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-
-<!-- Portfolio Modal 4 -->
-<div class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" role="dialog"
-     aria-labelledby="portfolioModal4Label" aria-hidden="true">
-    <div class="modal-dialog modal-xl" role="document">
-        <div class="modal-content">
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">
-          <i class="fa-solid fa-xmark"></i>
-          </span>
-            </button>
-            <div class="modal-body text-center">
-                <div class="container">
-                    <div class="row justify-content-center">
-                        <div class="col-lg-8 font-italic">
-                            <!-- Portfolio Modal - Title -->
-                            <h2 class="portfolio-modal-title text-secondary text-uppercase">Project 4</h2>
-                            <!-- Icon Divider -->
-                            <div class="divider-custom">
-                                <div class="divider-custom-line"></div>
-                                <div class="divider-custom-icon">
-                                    <i class="fab fa-laravel"></i>
-                                </div>
-                                <div class="divider-custom-line"></div>
-                            </div>
-                            <div class="card text-white bg-info mb-3 text-left">
-                                <div class="card-body">
-                                    <p class="card-text">
                                         This project aims to enhance security by implementing robust measures such as
                                         access key protection and encryption, mirroring the stringent security standards
                                         employed in banking systems. The focus is on safeguarding digital assets
@@ -816,9 +740,9 @@
     </div>
 </div>
 
-<!-- Portfolio Modal 3 -->
-<div class="portfolio-modal modal fade" id="portfolioModal3" tabindex="-1" role="dialog"
-     aria-labelledby="portfolioModal3Label" aria-hidden="true">
+<!-- Portfolio Modal 4 -->
+<div class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" role="dialog"
+     aria-labelledby="portfolioModal4Label" aria-hidden="true">
     <div class="modal-dialog modal-xl" role="document">
         <div class="modal-content">
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
@@ -831,7 +755,7 @@
                     <div class="row justify-content-center">
                         <div class="col-lg-8 font-italic">
                             <!-- Portfolio Modal - Title -->
-                            <h2 class="portfolio-modal-title text-secondary text-uppercase">Project 3</h2>
+                            <h2 class="portfolio-modal-title text-secondary text-uppercase">Project 4</h2>
                             <!-- Icon Divider -->
                             <div class="divider-custom">
                                 <div class="divider-custom-line"></div>
@@ -892,9 +816,9 @@
     </div>
 </div>
 
-<!-- Portfolio Modal 2 -->
-<div class="portfolio-modal modal fade" id="portfolioModal2" tabindex="-1" role="dialog"
-     aria-labelledby="portfolioModal2Label" aria-hidden="true">
+<!-- Portfolio Modal 3 -->
+<div class="portfolio-modal modal fade" id="portfolioModal3" tabindex="-1" role="dialog"
+     aria-labelledby="portfolioModal3Label" aria-hidden="true">
     <div class="modal-dialog modal-xl" role="document">
         <div class="modal-content">
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
@@ -907,7 +831,7 @@
                     <div class="row justify-content-center">
                         <div class="col-lg-8 font-italic">
                             <!-- Portfolio Modal - Title -->
-                            <h2 class="portfolio-modal-title text-secondary text-uppercase">Project 2</h2>
+                            <h2 class="portfolio-modal-title text-secondary text-uppercase">Project 3</h2>
                             <!-- Icon Divider -->
                             <div class="divider-custom">
                                 <div class="divider-custom-line"></div>
@@ -968,9 +892,9 @@
     </div>
 </div>
 
-<!-- Portfolio Modal 1 -->
-<div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog"
-     aria-labelledby="portfolioModal1Label" aria-hidden="true">
+<!-- Portfolio Modal 2 -->
+<div class="portfolio-modal modal fade" id="portfolioModal2" tabindex="-1" role="dialog"
+     aria-labelledby="portfolioModal2Label" aria-hidden="true">
     <div class="modal-dialog modal-xl" role="document">
         <div class="modal-content">
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
@@ -983,7 +907,7 @@
                     <div class="row justify-content-center">
                         <div class="col-lg-8 font-italic">
                             <!-- Portfolio Modal - Title -->
-                            <h2 class="portfolio-modal-title text-secondary text-uppercase">Project 1</h2>
+                            <h2 class="portfolio-modal-title text-secondary text-uppercase">Project 2</h2>
                             <!-- Icon Divider -->
                             <div class="divider-custom">
                                 <div class="divider-custom-line"></div>
@@ -1027,6 +951,82 @@
                                         <tr>
                                             <td>Duration</td>
                                             <td>4 months</td>
+                                        </tr>
+                                        </tbody>
+                                    </table>
+                                </ul>
+                            </div>
+                            <button class="btn btn-dark glowing-text-back-button btn-lg" href="#" data-dismiss="modal">
+                                <i class="far fa-times-circle"></i>
+                                Back
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Portfolio Modal 1 -->
+<div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog"
+     aria-labelledby="portfolioModal1Label" aria-hidden="true">
+    <div class="modal-dialog modal-xl" role="document">
+        <div class="modal-content">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">
+          <i class="fa-solid fa-xmark"></i>
+          </span>
+            </button>
+            <div class="modal-body text-center">
+                <div class="container">
+                    <div class="row justify-content-center">
+                        <div class="col-lg-8 font-italic">
+                            <!-- Portfolio Modal - Title -->
+                            <h2 class="portfolio-modal-title text-secondary text-uppercase">Project 1</h2>
+                            <!-- Icon Divider -->
+                            <div class="divider-custom">
+                                <div class="divider-custom-line"></div>
+                                <div class="divider-custom-icon">
+                                    <i class="fab fa-laravel"></i>
+                                </div>
+                                <div class="divider-custom-line"></div>
+                            </div>
+                            <div class="card text-white bg-info mb-3 text-left">
+                                <div class="card-body">
+                                    <p class="card-text">
+                                        The project focuses on optimizing the internal transportation of documents
+                                        within a bank's offices.
+                                        This initiative aims to enhance efficiency, reduce delays, and promote a
+                                        seamless workflow in handling crucial
+                                        materials between different departments</div>
+                                <ul class="list-group list-group-item-info">
+                                    <table class="table table-bordered table-info">
+                                        <thead>
+                                        </thead>
+                                        <tbody>
+                                        <tr>
+                                            <td>Roles</td>
+                                            <td>Back-end developer</td>
+                                        </tr>
+                                        <tr>
+                                            <td>Team</td>
+                                            <td>10 members (6 programmers, 1 qa, 2 ba, pm)</td>
+                                        </tr>
+                                        <tr>
+                                            <td>Technologies</td>
+                                            <td>Spring, JPA, Hibernate, Rabbit MQ, Git, JUnit, MySQL, Microservices,
+                                                Jenkins, Sonar
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td>Skills</td>
+                                            <td>Migration to a new database, rewriting modules for new logic, tests; tech support
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td>Duration</td>
+                                            <td>8 months</td>
                                         </tr>
                                         </tbody>
                                     </table>
