Upd Welcome section

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <div class="divider-custom-line"></div>
             </div>
             <!-- Masthead Subheading-->
-            <p class="masthead-subheading font-weight-light mb-0">Java - Web Developer - AWS</p>
+            <p class="masthead-subheading font-weight-light mb-0">Java/Kotlin - Software Engineer - AWS/Microsoft</p>
         </div>
     </div>
 </header>
@@ -93,9 +93,11 @@
                 </p>
                 <p class="font-weight-bold mb-2 h2">My technical skills:</p>
                 <p class="fade-in about-info" id="item1"><strong> <i class="fas fa-circle-notch fa-spin text-info"></i>
-                    Backend:</strong> Java, Spring (Core, Boot, MVC, Data, Security, Cloud)</p>
+                    Backend:</strong> Java, Kotlin, Spring (Core, Boot, MVC, Data, Security, Cloud)</p>
+                <p class="fade-in about-info" id="item1"><strong> <i class="fas fa-circle-notch fa-spin text-info"></i>
+                    Frontend:</strong> React, JavaScript, TypeScript, Vue.js, HTML, CSS, Bootstrap</p>
                 <p class="fade-in about-info" id="item2"><strong> <i class="fas fa-circle-notch fa-spin text-info"></i>
-                    Databases:</strong> PostgreSQL, MySQL, MongoDB, Hibernate</p>
+                    Databases:</strong> PostgreSQL, MySQL, MongoDB, MsSQL, Hibernate</p>
                 <p class="fade-in about-info" id="item3"><strong> <i class="fas fa-circle-notch fa-spin text-info"></i>
                     Cloud:</strong> AWS (EC2, Beanstalk, Lightsail, ASG, ELB, VPC, RDS, S3, SNS, SQS, Aurora,
                     CloudFront, IAM, CloudWatch, CloudFormation, API Gateway, Route53, Certificate Manager, Cognito,
@@ -108,7 +110,12 @@
                     tracing and logging, containerization), RabbitMQ, Kafka, Docker, Kubernetes (K8s), Docker Compose,
                     CI/CD (Jenkins)</p>
                 <p class="fade-in about-info" id="item6"><strong> <i class="fas fa-circle-notch fa-spin text-info"></i>
-                    Version control:</strong> GitHub, Bitbucket</p>
+                    Version control:</strong> GitHub, Bitbucket, GitLab</p>
+                <p class="fade-in about-info" id="item6"><i class="fas fa-circle-notch fa-spin text-info"></i>
+                    I have created projects from scratch and successfully launched them into production</p>
+                <p class="fade-in about-info" id="item6"><i class="fas fa-circle-notch fa-spin text-info"></i>
+                    Experienced in the international software development teams (up to 12 persons) based on Agile
+                    methodology</p>
                 <p class="fade-in about-info" id="item7"><strong><i class="fas fa-award text-warning"></i> AWS certified</strong>
                 </p>
                 <p class="fade-in about-info" id="item7"><strong><i class="fas fa-award text-warning"></i> Career
@@ -117,8 +124,6 @@
                 <p class="fade-in about-info" id="item9"><i class="fa-solid fa-play text-info"></i> English - B2</p>
                 <p class="fade-in about-info" id="item10"><i class="fa-solid fa-play text-info"></i> Polish - B2</p>
                 <p class="fade-in about-info" id="item11"><i class="fa-solid fa-play text-info"></i> Russian - native
-                    speaker</p>
-                <p class="fade-in about-info" id="item12"><i class="fa-solid fa-play text-info"></i> Belarusian - native
                     speaker</p>
                 <p class="fade-in font-weight-bold mb-2 h2" id="item13">Hobbies:</p>
                 <p class="fade-in about-info" id="item14"><i class="fa-solid fa-plug text-info"></i> I love an active
